# fx-spread-lab

./: ACHIEVEMENT_NOTES.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: EXAMPLES_20260709.md  USAGE.md
src/fx_spread_lab/: __init__.py  __main__.py  cli.py  spread.py
tests/: test_half_spread.py  test_mid.py  test_pips_bps.py  test_spread.py  test_spread_bps.py  test_version.py
